...
            )
        }

        Spacer(Modifier.height(24.dp))

        Text(
            "Eventos Destacados",
            color = Color.White,
            style = MaterialTheme.typography.titleLarge,
            fontWeight = FontWeight.Bold
        )

        Spacer(Modifier.height(12.dp))
...
